# access_extractor

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
context_sdk/: __init__.py
context_sdk/cache/: store.py
context_sdk/cli/: __init__.py  __main__.py
context_sdk/context/: merger.py  slicer.py
context_sdk/core/: engine.py  github.py
context_sdk/schema/: models.py
examples/sample_output/: Acme_FrontEnd_User_5.1.json  access_graph_compact.json  access_index.json  access_summary.md
extractor/engine/: runner.py  session.py
extractor/extractors/: base.py  controls.py  events.py  modules.py  queries.py  relationships.py  subforms.py  tables.py
extractor/graph/: builder.py  edges.py  nodes.py
publisher/: __init__.py  github_publisher.py  profiles.py
tools/: sanitize_sample.py  summarize.py
tools/visualizer/: index.html
ui/: app.py
